--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -1,28 +1,32 @@
 name: Danger PR Review
 
 on:
-  pull_request:
-    branches:
-      - main
-      - dev
+    pull_request:
+        branches:
+            - main
+            - dev
 
 jobs:
-  danger:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-      
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
+    danger:
+        runs-on: ubuntu-latest
+        permissions:
+            pull-requests: write
+            contents: read
 
-      - name: Install Dependencies
-        run: npm install
+        steps:
+            - name: Checkout Code
+              uses: actions/checkout@v3
 
-      - name: Run Danger
-        run: npx danger ci
-        env:
-          DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+            - name: Set up Node.js
+              uses: actions/setup-node@v3
+              with:
+                  node-version: '16'
+
+            - name: Install Dependencies
+              run: npm install
+
+            - name: Run Danger
+              run: npx danger ci
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
